# remote_driving

./: README.md
fsm/: ARCHITECTURE.md  CONFIG.md  PROJECT_SUMMARY.md  PROMPT_RECORD.md  QUICKSTART.md  README.md  WORK_SUMMARY.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
fsm/.claude/: settings.local.json
fsm/cpp/: CMakeLists.txt  package.xml
fsm/cpp/cloud_server/: CMakeLists.txt
fsm/cpp/cloud_server/config/: cloud_config.yaml
fsm/cpp/cloud_server/include/fsm/cloud/: alert_analyzer.hpp  prediction_interface.hpp  scheduling_service.hpp  signaling_server.hpp
fsm/cpp/cloud_server/src/: alert_analyzer.cpp  main.cpp  prediction_interface.cpp  scheduling_service.cpp  signaling_server.cpp
fsm/cpp/common/include/fsm/: config_manager.hpp  logger.hpp  message_types.hpp  utils.hpp
fsm/cpp/common/src/: config_manager.cpp  logger.cpp  message_types.cpp  utils.cpp
fsm/cpp/operator_client/: CMakeLists.txt
fsm/cpp/operator_client/include/fsm/operator/: operator_client.hpp  wheel_controller.hpp
fsm/cpp/operator_client/src/: main.cpp  operator_client.cpp  wheel_controller.cpp
fsm/cpp/proto/: fsm_messages.proto
fsm/cpp/vehicle_node/: CMakeLists.txt
fsm/cpp/vehicle_node/config/: vehicle_config.yaml
fsm/cpp/vehicle_node/include/fsm/vehicle/: command_executor.hpp  data_collector.hpp  latency_monitor.hpp  vehicle_node.hpp  video_encoder.hpp  webrtc_client.hpp
fsm/cpp/vehicle_node/src/: command_executor.cpp  data_collector.cpp  latency_monitor.cpp  vehicle_node.cpp  video_encoder.cpp  webrtc_client.cpp
fsm/docs/: BUILD_GUIDE.md  DEMO_GUIDE.md  SYSTEM_ARCHITECTURE.md  TEST_CASES.md  USAGE_GUIDE.md
fsm/html/: demo.html
fsm/mock/: mock_server.js  package-lock.json  package.json
fsm/scripts/: build_cpp.sh  simulate_emergency.sh  simulate_network.sh  start_demo.sh  stop_all.sh
fsm/src/: App.vue  style.css
fsm/src/components/: AIBar.vue  CameraSlot.vue  FleetFooter.vue  Header.vue  LeftSidebar.vue  LidarPanel.vue  RightSidebar.vue  VideoWall.vue
fsm/src/composables/: useDemoMode.ts  useRemoteControl.ts  useSteeringWheel.ts  useVideoSync.ts
fsm/src/services/: api.ts  mockData.ts  webrtc.ts  websocket.ts
fsm/src/stores/: camera.ts  fleet.ts  system.ts
fsm/src/types/: index.ts
