<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fsm_pilot</name>
  <version>1.1.0</version>
  <description>FSM-Pilot Remote Driving Platform for Autoware.universe</description>
  <maintainer email="developer@example.com">FSM Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Autoware Messages (optional) -->
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>

  <!-- External Dependencies -->
  <depend>opencv</depend>
  <depend>yaml-cpp</depend>
  <depend>nlohmann_json</depend>
  <depend>spdlog</depend>
  <depend>protobuf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
